fixed new user registration fixed adding books